[metadata]
name = opsfreevibration
version = file: src/opsfreevibration/__version__
author = Peter Talley
author_email = talley@utk.edu
description = Free vibration of arbitrary SDOF system in OpenSees due to initial conditions.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/otaithleigh/ops-free-vibration
license = MIT

[options]
python_requires = >=3.7
install_requires =
    numpy
    opswrapper
package_dir =
    =src
packages =
    opsfreevibration

[options.package_data]
opsfreevibration =
    __version__
